--- a/ask/templates/admin/ask/askpage/change_form.html
+++ b/ask/templates/admin/ask/askpage/change_form.html
@@ -8,7 +8,7 @@
 
 {% endblock %}
 
-{% block content_title %}<a class="brand" href="#">Change {{original}}</a>
+{% block content_title %}<a class="navbar-brand" href="#">Change {{original}}</a>
 {% endblock %}
 
 
