--- a/ask/templates/admin/ask/codebook.html
+++ b/ask/templates/admin/ask/codebook.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {%load markup %}
 
-{% block content_title %}<a class="brand">Questionnaire Codebooks </a>{% endblock %}
+{% block content_title %}<a class="navbar-brand">Questionnaire Codebooks </a>{% endblock %}
 
 {% block content %}
 
