--- a/signalbox/templates/admin/signalbox/add_participant.html
+++ b/signalbox/templates/admin/signalbox/add_participant.html
@@ -3,7 +3,7 @@
 
 
 {% block content_title %}
-    <a class="brand">Add a user to a study</a>
+    <a class="navbar-brand">Add a user to a study</a>
 {% endblock %}
 
 {% block content %}
