--- a/signalbox/templates/admin/signalbox/answer/list_duplicates.html
+++ b/signalbox/templates/admin/signalbox/answer/list_duplicates.html
@@ -15,7 +15,7 @@
     {% endblock %}
 
     {% block content_title %}
-    <a class="brand">Observations with duplicate data</a>{% endblock %}
+    <a class="navbar-brand">Observations with duplicate data</a>{% endblock %}
 
 
 
