--- a/signalbox/templates/admin/signalbox/answer/list_studies_with_duplicates.html
+++ b/signalbox/templates/admin/signalbox/answer/list_studies_with_duplicates.html
@@ -9,7 +9,7 @@
 
 
 
-    {% block content_title %}<a class="brand">Studies with duplicate replies</a>{%endblock%}
+    {% block content_title %}<a class="navbar-brand">Studies with duplicate replies</a>{%endblock%}
 
     {% block content %}
 
