--- a/signalbox/templates/admin/signalbox/script/change_form.html
+++ b/signalbox/templates/admin/signalbox/script/change_form.html
@@ -1,4 +1,4 @@
-{% extends "signalbox:admin/change_form.html" %}
+{% extends "admin/change_form.html" %}
 {% load compress %}
 
 {% block sidebar %}
