--- a/signalbox/templates/base.html
+++ b/signalbox/templates/base.html
@@ -38,7 +38,7 @@
               <div class="navbar-inner">
                   <div class="container-fluid">
                 {% block brand %}
-                <div class="brand">
+                <div class="navbar-brand">
                     <a href="/">{{BRAND_NAME}}</a>
                 </div>
                 {% endblock %}
