--- a/signalbox/templates/manage/edit_participant.html
+++ b/signalbox/templates/manage/edit_participant.html
@@ -4,7 +4,7 @@
 
 {% load markup humanize %}
 
-{% block content_title %}<a class="brand">Edit profile information for {{form.instance.user.username }}</a>{% endblock %}
+{% block content_title %}<a class="navbar-brand">Edit profile information for {{form.instance.user.username }}</a>{% endblock %}
 
 {% block content %}
 <div class="row">
