--- a/signalbox/templates/manage/find_participant.html
+++ b/signalbox/templates/manage/find_participant.html
@@ -1,8 +1,8 @@
-{% extends "signalbox:admin/base.html" %}
+{% extends "signalbox:admin/base_site.html" %}
 {% load markup %}
 
 
-{% block content_title %}<a class="brand">Find participant</a>{% endblock %}
+{% block content_title %}<a class="navbar-brand">Find participant</a>{% endblock %}
 
 
 {% block content %}
