--- a/signalbox/templates/manage/followups_outstanding.html
+++ b/signalbox/templates/manage/followups_outstanding.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 
 
-{% block content_title %}<a class="brand">Users requiring followups</a>{% endblock %}
+{% block content_title %}<a class="navbar-brand">Users requiring followups</a>{% endblock %}
 
 {% block content %}
 <div class="row">
