--- a/signalbox/templates/manage/preview_reply.html
+++ b/signalbox/templates/manage/preview_reply.html
@@ -5,7 +5,7 @@
 {% load markup %}
 
 {% block content_title %}
-<a class="brand" href="{% url 'admin:signalbox_reply_change' reply.id %}">User responses</a>
+<a class="navbar-brand" href="{% url 'admin:signalbox_reply_change' reply.id %}">User responses</a>
 
 {% endblock %}
 
