--- a/signalbox/templates/manage/user_message.html
+++ b/signalbox/templates/manage/user_message.html
@@ -10,7 +10,7 @@
 
 
 
-{% block content_title %}<a class="brand">Send message</a>{% endblock %}
+{% block content_title %}<a class="navbar-brand">Send message</a>{% endblock %}
 
 {% load markup humanize %}
 
