--- a/signalbox/templates/reversion/revision_list.html
+++ b/signalbox/templates/reversion/revision_list.html
@@ -1,6 +1,6 @@
 {% extends "signalbox:admin/base_site.html" %}
 
-{% block content_title %}<a class="brand">Revisions history</a>{% endblock %}
+{% block content_title %}<a class="navbar-brand">Revisions history</a>{% endblock %}
 
 {% load markup humanize %}
 
