--- a/signalbox/templates/signalbox/wizard_form.html
+++ b/signalbox/templates/signalbox/wizard_form.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content_title %}
-<p class="brand">Add participant (step {{ wizard.steps.step1 }} of {{ wizard.steps.count }})</p>
+<p class="navbar-brand">Add participant (step {{ wizard.steps.step1 }} of {{ wizard.steps.count }})</p>
 {% endblock %}
 
 {% block content %}
