--- a/signalbox/templates/base.html
+++ b/signalbox/templates/base.html
@@ -7,9 +7,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/png" href="http://signalbox.s3.amazonaws.com/static/favicon.ico" />
+    
     <title>{% block title %}Signalbox: Online Research{% endblock title %}</title>
-    <script type="text/javascript" src="{{STATIC_URL}}js/jquery.min.js"></script>
+    
     {% compress css %}
         <link href="{{STATIC_URL}}css/bootstrap.min.css" rel="stylesheet" media="screen,print">
         <link rel="stylesheet" href="{{STATIC_URL}}css/jquery.ui.css" type="text/css" media="screen">
@@ -17,11 +17,11 @@
         <link rel="stylesheet" href="{{STATIC_URL}}css/signalbox.css" type="text/css" media="screen,print">
     {% endcompress %}
     <link rel="stylesheet" href="{{STATIC_URL}}css/custom.css" type="text/css" media="screen,print">
-<!--     <link rel="stylesheet" type="text/css"
-       href="http://releases.flowplayer.org/5.2.0/skin/functional.css" />
- -->
 
-    {% render_block "css"  %}
+    {% render_block "css" %}
+    
+    <script type="text/javascript" src="{{STATIC_URL}}js/jquery.min.js"></script>
+
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -38,15 +38,14 @@
               <div class="navbar-inner">
                   <div class="container-fluid">
                 {% block brand %}
-                <div class="navbar-brand">
+                <div class="brand">
                     <a href="/">{{BRAND_NAME}}</a>
                 </div>
                 {% endblock %}
 
                     {% if not hidemenu %}
                       <ul class="nav">
-                          Menu here
-{#                         {% show_menu 0 2  2 2  "menu.html" %}#}
+                            {#  {% show_menu 0 2  2 2  "menu.html" %} #}
                       </ul>
                     {% endif %}
 
@@ -65,10 +64,7 @@
               <div class="row">
                 <div class="span6">
                     {% block submenu %}
-                      <ul class="nav nav-pills">
-                          Submenu here
-{#                            {% show_menu 1 10 0 1 "sub_menu.html" %}#}
-                      </ul>
+
                     {% endblock submenu %}
                 </div>
               </div>
@@ -98,35 +94,46 @@
     </div>
     {% endblock %}
     {% render_block "js" postprocessor "compressor.contrib.sekizai.compress" %}
+
+
+    {% compress js %}
+    <script type="text/javascript">
+    (function() {
+      $(document).ready(function() {
+        $(".datepicker").datepicker({
+          dateFormat: "dd/mm/yy"
+        });
+        $(".datetimepicker").datetimepicker({
+          dateFormat: 'dd/mm/yy'
+        });
+        return $(".timepicker").timepicker({});
+      });
+
+    }).call(this);
+    </script>
+    <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', '{{GOOGLE_TRACKING_ID}}', 'auto');
+          ga('send', 'pageview');
+    </script>
+
+      {% endcompress %}
+
+
     </body>
   </html>
 
-  {% addtoblock "js" %}
+{% addtoblock "js" %}
   <script type="text/javascript" src="{{STATIC_URL}}js/jquery.ui.js"></script>
   <script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-timepicker-addon.js"></script>
   <script type="text/javascript" src="{{STATIC_URL}}js/mousetrap.min.js"></script>
   <script type="text/javascript" src="{{STATIC_URL}}js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="{{STATIC_URL}}js/flowplayer.min.js"></script>
-
   <script language="JavaScript" src="{{STATIC_URL}}js/swfobject.js"></script>
   <script language="JavaScript" src="{{ STATIC_URL }}js/tab_anchor_setter.js"></script>
-
-  {% endaddtoblock %}
   <script type="text/javascript" src="{{STATIC_URL}}audiojs/audio.min.js"></script>
+{% endaddtoblock %}
 
-{% compress js %}
-<script type="text/javascript">
-(function() {
-  $(document).ready(function() {
-    $(".datepicker").datepicker({
-      dateFormat: "dd/mm/yy"
-    });
-    $(".datetimepicker").datetimepicker({
-      dateFormat: 'dd/mm/yy'
-    });
-    return $(".timepicker").timepicker({});
-  });
-
-}).call(this);
-</script>
-{% endcompress %}
