reorganised javascript includes

--- a/ask/templates/admin/ask/asker/change_form.html
+++ b/ask/templates/admin/ask/asker/change_form.html
@@ -34,20 +34,23 @@
                {% endif %}
 	{% endif %}
 
-    <script type="text/javascript" src="{{STATIC_URL}}js/ZeroClipboard.min.js"></script>
     <script type="text/javascript">
-
     ZeroClipboard.setDefaults({
       trustedOrigins: [window.location.protocol + "//" + window.location.host]
     });
     ZeroClipboard.setDefaults( { moviePath: '{{STATIC_URL}}js/ZeroClipboard.swf' } );
     var clip = new ZeroClipboard($("#copy-button"));
-
     clip.on( 'complete', function ( client, args ) {
-      alert("Copied text to clipboard: " + args.text );
+        $.notify({
+            // options
+            message: "Copied text to clipboard: " + args.text
+        },{
+            // settings
+            type: 'info',
+            delay: 5000
+        });
     } );
     </script>
-
 </div>
 </ul>
 
