--- a/signalbox/templates/admin/base_site.html
+++ b/signalbox/templates/admin/base_site.html
@@ -3,31 +3,36 @@
 {% load admin_static bootstrapped_goodies_tags %}
 {% load compress %}
 
-{% compress css %}
-<link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.ui.css" type="text/css">
-<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
-<link type="text/css" href="{{ STATIC_URL }}css/signalbox.css" rel="stylesheet">
-<link rel="stylesheet" href="{{STATIC_URL}}css/jquery-ui-timepicker-addon.css" type="text/css" media="screen">
-{% endcompress %}
+
+{% block extrahead %}
+	{% compress css %}
+		<link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.ui.css" type="text/css">
+		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link type="text/css" href="{{ STATIC_URL }}css/signalbox.css" rel="stylesheet">
+		<link rel="stylesheet" href="{{STATIC_URL}}css/jquery-ui-timepicker-addon.css" type="text/css" media="screen">
+	{% endcompress %}
 
 
+	{% compress js %}
+		<script type="text/javascript" src="{{STATIC_URL}}js/bootstrap-notify.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/ZeroClipboard.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/underscore-min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/tab_anchor_setter.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/mousetrap.min.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}audiojs/audio.min.js"></script>
 
-<script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
+		<script type="text/javascript">
+		(function($) {
+		    $(document).ready(function() {
+		        $('input[type="submit"]').addClass('btn');
+		    });
+		}(jQuery));
+		</script>
+	{% endcompress %}
 
-<script type="text/javascript" src="{{ STATIC_URL }}js/underscore-min.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/tab_anchor_setter.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}js/mousetrap.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}audiojs/audio.min.js"></script>
 
-<script type="text/javascript">
-(function($) {
-    $(document).ready(function() {
-        $('input[type="submit"]').addClass('btn');
-    });
-}(jQuery));
-</script>
-
+{% endblock %}
 
 
 
