--- a/signalbox/templates/admin/signalbox/answer/resolve_duplicates.html
+++ b/signalbox/templates/admin/signalbox/answer/resolve_duplicates.html
@@ -3,7 +3,7 @@
 
 
 
-{% block content_title %}<a class="brand">Resolve duplicate replies for observation #{{observation.id}}</a><a class="btn pull-right" href="{% url 'admin:signalbox_observation_change' observation.id %}">Edit Observation</a>{% endblock %}
+{% block content_title %}<a class="navbar-brand">Resolve duplicate replies for observation #{{observation.id}}</a><a class="btn pull-right" href="{% url 'admin:signalbox_observation_change' observation.id %}">Edit Observation</a>{% endblock %}
 
 
 {% block breadcrumbs %}
