--- a/signalbox/templates/admin/signalbox/study/change_form.html
+++ b/signalbox/templates/admin/signalbox/study/change_form.html
@@ -8,7 +8,7 @@ Study Dashboard: {{original.name}}
 {% endblock %}
 
 {% block content_title %}
-<a class="navbar-brand">Change Study: <strong>{{original.name}}</strong>
+<a class="navbar-brand">Change Study: <strong>{{original.name}}</strong></a>
 {% endblock %}
 
 
