--- a/signalbox/templates/admin/signalbox/todo_list.html
+++ b/signalbox/templates/admin/signalbox/todo_list.html
@@ -3,7 +3,7 @@
 
 
 {% block content_title %}
-<a class="brand">Observations due</a>
+<a class="navbar-brand">Observations due</a>
 {% if item_list %}
 <a class='btn btn-danger pull-right' href='{% url 'do_todo' %}'>Send all pending Observation signals now</a>
 {% endif %}
