--- a/signalbox/templates/manage/export_data.html
+++ b/signalbox/templates/manage/export_data.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load markup %}
 
-{% block content_title %}<a class="brand">Choose data to Export</a>{% endblock %}
+{% block content_title %}<a class="navbar-brand">Choose data to Export</a>{% endblock %}
 
 
 {% block content %}
