--- a/signalbox/templates/signalbox/reassign_reply_to_observation.html
+++ b/signalbox/templates/signalbox/reassign_reply_to_observation.html
@@ -17,7 +17,7 @@ Update observation for reply {{object.id}}
 
 
 {% block content_title %}
-<a class="brand" href="#">Update linked observation for reply #{{object.id}}</a>
+<a class="navbar-brand" href="#">Update linked observation for reply #{{object.id}}</a>
 {% endblock %}
 
 
