--- a/ask/templates/admin/ask/asker/change_form.html
+++ b/ask/templates/admin/ask/asker/change_form.html
@@ -36,23 +36,14 @@
                {% endif %}
 	{% endif %}
 
-    <script type="text/javascript">
-    ZeroClipboard.setDefaults({
-      trustedOrigins: [window.location.protocol + "//" + window.location.host]
-    });
-    ZeroClipboard.setDefaults( { moviePath: '{{STATIC_URL}}js/ZeroClipboard.swf' } );
-    var clip = new ZeroClipboard($("#copy-button"));
-    clip.on( 'complete', function ( client, args ) {
-        $.notify({
-            // options
-            message: "Copied text to clipboard: " + args.text
-        },{
-            // settings
-            type: 'info',
-            delay: 5000
-        });
-    } );
-    </script>
+    {% compress js %}
+        <script type="text/javascript">
+            Mousetrap.bind(['ctrl+e', 'command+e'], function(e) {
+                location = "{% url 'edit_asker_as_text' object_id %}";
+            });
+            {% include "js/asker_edit.js" %}
+        </script>
+    {% endcompress %}
 </div>
 </ul>
 
